2015-09-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Relax covariance file format restriction to accomodate rmw
	* Add feature to generate Makefiles
	
2015-08-13  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix bug when tabix file does not have headers

2015-07-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add function to faciliate parallel computation

2015-07-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Expand tilde in the file names before passing them to C

2015-06-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix UBSAN reported error: when NA_INTEGER + NA_INTEGER causes int overflow

2015-06-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Remove stringr dependency

2015-06-17  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Remove C++11 support. Not all R platforms has C++11 compiler

2015-06-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Not suport Solaris 10 due to difficulties in setting up build env.

2015-06-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support load summary statistics for binary trait

2015-05-19  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add timeout = 3 seconds when checking new version

2015-05-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support travis

2015-05-12  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a corner case to avoid crash

2015-04-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Update codes

2014-12-21  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve error messages

2014-05-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add sanity check codes and demo codes

2014-05-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add more checks for VCF/BCF index files

2014-04-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
