@@ -2,8 +2,8 @@ Package: seqminer
 Type: Package
 Title: Efficiently Read Sequence Data (VCF Format, BCF Format and METAL
         Format) into R
-Version: 4.9
-Date: 2015-09-16
+Version: 5.0
+Date: 2015-10-20
 Author: Xiaowei Zhan <zhanxw@gmail.com> and Dajiang Liu
     <dajiang.liu@gmail.com>, with contributions from Heng Li
     <lh3@live.co.uk> (Heng Li wrote tabix and with MIT license
@@ -16,10 +16,10 @@ Copyright: We have used the following software and made minimal
         printf, fprintf ; also changed its un-safe pointer arithmetics.
 License: GPL | file LICENSE
 URL: http://seqminer.genomic.codes
-Packaged: 2015-09-16 16:10:31 UTC; zhanxw
+Packaged: 2015-10-21 22:15:35 UTC; zhanxw
 Repository: CRAN
 Suggests: testthat, SKAT
 SystemRequirements: zlib headers and libraries, optionally also bzip2
         and POSIX-compliant regex functions.
 NeedsCompilation: yes
-Date/Publication: 2015-09-16 19:55:04
+Date/Publication: 2015-10-22 08:24:42
