@@ -1,9 +1,9 @@
-d374cf3fc887d63f8f4f9fa00484bbf2 *ChangeLog
-e02b060577a3faddee13b4497b8cb43c *DESCRIPTION
+5aa7db9ba4a9b125646e4bc3ae9d42c3 *ChangeLog
+f427c37f5c8fc914e6f858135dfe2ff5 *DESCRIPTION
 50c28547d51e8cbb9a908e6696fedb86 *LICENSE
 3afbb52bd93205aa6fbf940ae4e9d567 *NAMESPACE
 c73956e4acc00b9d651f02ae9df0b159 *R/genMakefile.R
-8a4439844ac1e5ada5153ed7f563ff43 *R/seqminer.R
+8c3f84dd1b1f5c66c76dd5aa82dde718 *R/seqminer.R
 8570f7b85f02dd1c3d21b834e1224ae8 *README.md
 131a236039d88977475269c6ee6c6e2c *cleanup
 f43e526f7804acf3b0fdc8f10bbbbd4c *configure
@@ -13,7 +13,7 @@ a7aa8e76f7e4646af6b644cdf37f2cb7 *demo/00Index
 34ab676ae0614287c6170163dbcc0c44 *demo/annotate.R
 80afcb0fa924316b839b3d56655d05fe *demo/meta.workflow.R
 076b6535f57410f9475402c8748869cf *demo/vcf.workflow.R
-783f30a03b947ade65eb1006c46de1b7 *inst/CITATION
+fbfa0ef201afbcdf2c180a9ff9448c99 *inst/CITATION
 1c96de0a2112c8f4cc6fbdb911a29912 *inst/doc/Manual.html
 751c636c82b643e5a9498591b5218032 *inst/rvtests/cfh.refFlat.txt
 b94af6795e947307028d232aee84d501 *inst/rvtests/rvtest.MetaCov.assoc.gz
